Central haloes fix

--- a/colibre/auto_plotter/uv_magnitude_scaling.yml
+++ b/colibre/auto_plotter/uv_magnitude_scaling.yml
@@ -62,8 +62,8 @@ uv_magnitude_stellar_mass_all_50:
 
 uv_magnitude_halo_mass_all_50:
   type: "scatter"
-  # select_structure_type: 10
-  # comment: "Centrals only"
+  select_structure_type: 1
+  comment: "Centrals only"
   legend_loc: "upper left"
   x:
     quantity: "masses.mass_200crit"
@@ -93,5 +93,5 @@ uv_magnitude_halo_mass_all_50:
       units: "dimensionless"
   metadata:
     title: FUV Magnitude - Halo Mass Relation
-    caption: 50 kpc aperture dust-free GALEX FUV-band magnitude vs $M_{200,crit}$ halo mass. Magnitudes have been corrected for the chosen IMF using FSPS. Includes all haloes, including subhaloes.
+    caption: 50 kpc aperture dust-free GALEX FUV-band magnitude vs $M_{200,crit}$ halo mass. Magnitudes have been corrected for the chosen IMF using FSPS. Central haloes only.
     section: vIMF Diagnostic Plots
