--- a/colibre/auto_plotter/baryon_fractions.yml
+++ b/colibre/auto_plotter/baryon_fractions.yml
@@ -72,6 +72,45 @@ gas_fraction_500_no_bias:
     - filename: HaloMassGasFractions/Eckert2016.hdf5
     - filename: HaloMassGasFractions/Lovisari2015.hdf5
 
+hot_gas_fraction_500_no_bias:
+  type: "scatter"
+  select_structure_type: 1
+  comment: "Centrals only"
+  legend_loc: "upper left"
+  x:
+    quantity: "spherical_overdensities.mass_500_rhocrit"
+    units: Solar_Mass
+    start: 1e10
+    end: 1e15
+  y:
+    quantity: "derived_quantities.hot_gas_fraction_true_R500"
+    units:  "dimensionless"
+    log: false
+    start: 0.
+    end: 1.2
+  median:
+    plot: true
+    log: true
+    min_num_points_highlight: 0
+    adaptive: true
+    number_of_bins: 25
+    start:
+      value: 1e10
+      units: Solar_Mass
+    end:
+      value: 1e15
+      units: Solar_Mass
+  metadata:
+    title: "Halo hot gas fractions within $R_{500}$ (no hydrostatic bias)"
+    caption: Fraction of halo mass within $R_{500}$ in hot ($T>10^5$K) gas, normalised by the cosmic mean. These are 'true' values, i.e. no cut or observational correction was applied. The observational data does not include any correction for hydrostatic bias.
+    section: Baryon Fractions
+  observational_data:
+    - filename: HaloMassGasFractions/Lin2012.hdf5
+    - filename: HaloMassGasFractions/Sun2009.hdf5
+    - filename: HaloMassGasFractions/Vikhlinin2006.hdf5
+    - filename: HaloMassGasFractions/Eckert2016.hdf5
+    - filename: HaloMassGasFractions/Lovisari2015.hdf5
+
 gas_fraction_500_with_bias:
   type: "scatter"
   select_structure_type: 1
