--- a/colibre/auto_plotter/corrected_luminosity_functions.yml
+++ b/colibre/auto_plotter/corrected_luminosity_functions.yml
@@ -112,51 +112,51 @@ corrected_luminosity_k_function_50:
   observational_data:
     - filename: GalaxyLuminosityFunction/Driver2012_K.hdf5
 
-# corrected_luminosity_w_dust_FUV_function_50:
-#   type: "luminosityfunction"
-#   legend_loc: "lower left"
-#   number_of_bins: 25
-#   x:
-#     quantity: "derived_quantities.corrected_magnitudes_w_dust_FUV_band_50_kpc"
-#     log: false
-#     units: "dimensionless"
-#     start: -25
-#     end: -13.5
-#   y:
-#     units: 1/Mpc**3
-#     start: 1e-6
-#     end: 0.316 # (1e-0.5)
-#   metadata:
-#     title: FUV-band Luminosity Function (50 kpc aperture, Dust Attenuated)
-#     caption: 50 kpc aperture dust-attenuated luminosity function in the GALEX FUV-band, corrected for the chosen IMF using FSPS, showing all galaxies with a fixed bin-width of 0.2 dex. Dust attenuation is based on the Trayford et al. (2015) galaxy-independent model.
-#     section: vIMF Luminosity Function
-#   observational_data:
-#     - filename: GalaxyLuminosityFunction/Bouwens2021A_FUV.hdf5
-#     - filename: GalaxyLuminosityFunction/Casey2024A_FUV.hdf5
-#     - filename: GalaxyLuminosityFunction/Castellano2023A_FUV.hdf5
-#     - filename: GalaxyLuminosityFunction/Harikane2022A_FUV.hdf5
-#     - filename: GalaxyLuminosityFunction/Harikane2023A_FUV.hdf5
-#     - filename: GalaxyLuminosityFunction/Robertson2024A_FUV.hdf5
+corrected_luminosity_w_dust_FUV_function_50:
+  type: "luminosityfunction"
+  legend_loc: "lower left"
+  number_of_bins: 25
+  x:
+    quantity: "derived_quantities.corrected_magnitudes_w_dust_FUV_band_50_kpc"
+    log: false
+    units: "dimensionless"
+    start: -25
+    end: -13.5
+  y:
+    units: 1/Mpc**3
+    start: 1e-6
+    end: 0.316 # (1e-0.5)
+  metadata:
+    title: FUV-band Luminosity Function (50 kpc aperture, Dust Attenuated)
+    caption: 50 kpc aperture dust-attenuated luminosity function in the GALEX FUV-band, corrected for the chosen IMF using FSPS, showing all galaxies with a fixed bin-width of 0.2 dex. Dust attenuation is based on the Trayford et al. (2015) galaxy-independent model.
+    section: vIMF Luminosity Function
+  observational_data:
+    - filename: GalaxyLuminosityFunction/Bouwens2021A_FUV.hdf5
+    - filename: GalaxyLuminosityFunction/Casey2024A_FUV.hdf5
+    - filename: GalaxyLuminosityFunction/Castellano2023A_FUV.hdf5
+    - filename: GalaxyLuminosityFunction/Harikane2022A_FUV.hdf5
+    - filename: GalaxyLuminosityFunction/Harikane2023A_FUV.hdf5
+    - filename: GalaxyLuminosityFunction/Robertson2024A_FUV.hdf5
 
-# corrected_luminosity_w_dust_r_function_50:
-#   type: "luminosityfunction"
-#   legend_loc: "lower left"
-#   number_of_bins: 25
-#   x:
-#     quantity: "derived_quantities.corrected_magnitudes_w_dust_r_band_50_kpc"
-#     log: false
-#     units: "dimensionless"
-#     start: -25
-#     end: -13.5
-#   y:
-#     units: 1/Mpc**3
-#     start: 1e-6
-#     end: 0.316 # (1e-0.5)
-#   metadata:
-#     title: r-band Luminosity Function (50 kpc aperture, Dust Attenuated)
-#     caption: 50 kpc aperture dust-attenuated rest-frame luminosity function in the SDSS r-band, corrected for the chosen IMF using FSPS, showing all galaxies with a fixed bin-width of 0.2 dex. Dust attenuation is based on the Trayford et al. (2015) galaxy-independent model.
-#     section: vIMF Luminosity Function
-#   observational_data:
-#     - filename: GalaxyLuminosityFunction/Driver2012_r.hdf5
-#     - filename: GalaxyLuminosityFunction/Loveday2012_r.hdf5
+corrected_luminosity_w_dust_r_function_50:
+  type: "luminosityfunction"
+  legend_loc: "lower left"
+  number_of_bins: 25
+  x:
+    quantity: "derived_quantities.corrected_magnitudes_w_dust_r_band_50_kpc"
+    log: false
+    units: "dimensionless"
+    start: -25
+    end: -13.5
+  y:
+    units: 1/Mpc**3
+    start: 1e-6
+    end: 0.316 # (1e-0.5)
+  metadata:
+    title: r-band Luminosity Function (50 kpc aperture, Dust Attenuated)
+    caption: 50 kpc aperture dust-attenuated rest-frame luminosity function in the SDSS r-band, corrected for the chosen IMF using FSPS, showing all galaxies with a fixed bin-width of 0.2 dex. Dust attenuation is based on the Trayford et al. (2015) galaxy-independent model.
+    section: vIMF Luminosity Function
+  observational_data:
+    - filename: GalaxyLuminosityFunction/Driver2012_r.hdf5
+    - filename: GalaxyLuminosityFunction/Loveday2012_r.hdf5
 
