--- a/colibre/auto_plotter/dust_mass_function.yml
+++ b/colibre/auto_plotter/dust_mass_function.yml
@@ -20,6 +20,7 @@ dust_mass_function:
     - filename: GalaxyDustMassFunction/Pozzi2020_z001p800.hdf5
     - filename: GalaxyDustMassFunction/Beeston2018_z000p000.hdf5
     - filename: GalaxyDustMassFunction/Traina2024.hdf5
+    - filename: GalaxyDustMassFunction/Berta2025.hdf5
 
 adaptive_dust_mass_function:
   type: "adaptivemassfunction"
@@ -43,6 +44,7 @@ adaptive_dust_mass_function:
     - filename: GalaxyDustMassFunction/Pozzi2020_z001p800.hdf5
     - filename: GalaxyDustMassFunction/Beeston2018_z000p000.hdf5
     - filename: GalaxyDustMassFunction/Traina2024.hdf5
+    - filename: GalaxyDustMassFunction/Berta2025.hdf5
 
 dust_mass_function_molecular:
   type: "massfunction"
@@ -66,6 +68,7 @@ dust_mass_function_molecular:
     - filename: GalaxyDustMassFunction/Pozzi2020_z001p800.hdf5
     - filename: GalaxyDustMassFunction/Beeston2018_z000p000.hdf5
     - filename: GalaxyDustMassFunction/Traina2024.hdf5
+    - filename: GalaxyDustMassFunction/Berta2025.hdf5
 
 dust_mass_function_neutral:
   type: "massfunction"
@@ -89,6 +92,7 @@ dust_mass_function_neutral:
     - filename: GalaxyDustMassFunction/Pozzi2020_z001p800.hdf5
     - filename: GalaxyDustMassFunction/Beeston2018_z000p000.hdf5
     - filename: GalaxyDustMassFunction/Traina2024.hdf5
+    - filename: GalaxyDustMassFunction/Berta2025.hdf5
 
 dust_mass_function_cold_dense:
   type: "massfunction"
@@ -112,4 +116,5 @@ dust_mass_function_cold_dense:
     - filename: GalaxyDustMassFunction/Pozzi2020_z001p800.hdf5
     - filename: GalaxyDustMassFunction/Beeston2018_z000p000.hdf5
     - filename: GalaxyDustMassFunction/Traina2024.hdf5
+    - filename: GalaxyDustMassFunction/Berta2025.hdf5
 
